fix: move header out of content card on mobile

--- a/src/components/authentication/styles/login.scss
+++ b/src/components/authentication/styles/login.scss
@@ -482,6 +482,8 @@
 }
 
 .header-logo {
+  display: flex;
+  align-items: center;
   width: 160px;
   height: 60px;
   display: flex;
@@ -490,6 +492,7 @@
 @media only screen and (max-width: 1280px) {
   .mobile-header {
       display: flex;
+      padding: 12px 20px;
   }
   .login {
     padding-top: 0;
