--- a/src/pages/sayHello/style.css
+++ b/src/pages/sayHello/style.css
@@ -511,7 +511,7 @@ ul, li {
     display: none;
   }
   .say-hello-page-wrapper {
-    padding: 13px;
+    padding: 0 0 13px;
     background-color: #041416;
     width: auto;
   }
